...

class _SelectTimePageState extends ConsumerState<SelectTimePage> {
  var selectedDate;
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: Key('select-time-page'),
      body: SingleChildScrollView(
        padding: EdgeInsets.symmetric(horizontal: 20, vertical: 40),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            SizedBox(height: 100),
...
              style: appTheme.textTheme.displayMedium.copyWith(
                color: blackColor,
              ),
            ),
            SizedBox(height: 50),
            Container(
              key: Key('date-picker'),
              height: 250,
              decoration: BoxDecoration(
                border: Border.all(color: blackColor, width: 1.3),
                borderRadius: BorderRadius.circular(16),
              ),
              padding: EdgeInsets.all(10),
...
