...

  List<Map<int, String>> selectedIngredientsMap = [];

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: Key('ingredients-page'),
      bottomNavigationBar: Container(
        padding: EdgeInsets.all(20),
        child: ref.watch(recipeProvider).when(
              data: (data) {
                return MainButtonWidget(
                  key: Key('main-button'),
                  text: 'Continue',
                  onPressed: () {
                    ref.read(recipeProvider.notifier).getRecipes(
                      selectedIngredientsMap
                          .map((e) => e.values.first)
                          .toList(),
...
